# meerkat-graphics

./: .gitignore  CMakeLists.txt  geometry.h  main.cpp
geometry/: color.cpp  iterators.h  shape.h  transform.h  vector.h
geometry/iterators/: vertex_iterator.h
src/: CMakeLists.txt  main.cpp
src/geometry/: CMakeLists.txt  color.cpp  color.h  color.hpp  geometry.hpp  shape.cpp  transform.cpp  transform.h  transform.hpp  vector.hpp
src/geometry/iterators/: iterators.hpp  vertex_iterator.hpp
src/geometry/shapes/: shape.cpp  shape.hpp
tests/: CMakeLists.txt  transform_test.cpp
